feature_dodo: delivery list ui

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
@@ -58,7 +58,8 @@
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="20px"
-               android:textSize="38px"/>
+               android:textSize="38px"
+               android:textColor="@color/text_color"/>
 
            <ImageView
                android:id="@+id/imageViewCompleted"
@@ -71,6 +72,8 @@
        </LinearLayout>
 
    </LinearLayout>
+
+
 
 
     <android.support.v7.widget.RecyclerView
