--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_custom_two_buttons.xml
@@ -41,7 +41,7 @@
                 android:text="@string/alert"
                 android:textColor="@color/text_color"
                 android:textSize="50px"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_marginTop="40px"
 
                 />
