--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -1,135 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rootLinear"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:background="@drawable/bg_white_grey_light_selector"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearLayoutMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10px"
-        android:layout_marginBottom="10px"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:layout_width="420px"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="28px"
-            android:orientation="vertical">
-
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/textViewOrderId"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/order_id"
-                    android:textColor="@color/new_orange"
-                    android:textSize="36px"
-                    android:visibility="visible" />
-
-                <TextView
-                    android:id="@+id/textViewOrderIdValue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10px"
-                    android:text="00000000000"
-                    android:layout_toRightOf="@+id/textViewOrderId"
-                    android:textColor="@color/bg_grey_opaque"
-                    android:textSize="42px"
-                    android:visibility="visible" />
-
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/textViewCustomerName"
-                android:layout_width="380px"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15px"
-                android:gravity="center_vertical"
-                android:text="Aneesh"
-                android:textColor="@color/bg_grey_opaque"
-                android:textSize="42px"
-                android:visibility="visible" />
-
-
-            <TextView
-                android:id="@+id/textViewCustomerDeliveryAddress"
-                android:layout_width="420px"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10px"
-                android:layout_marginTop="15px"
-                android:gravity="center_vertical"
-                android:text="Madhya Marg, 28B, Sector 28, Chandigarh"
-                android:textColor="@color/bg_grey_opaque"
-                android:textSize="32px"
-                android:visibility="visible" />
-
-
-        </LinearLayout>
-
+        android:layout_centerVertical="true"
+        android:layout_margin="28px"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="20px"
+            android:orientation="horizontal"
             >
-
-            <RelativeLayout
-                android:id="@+id/relativeLayoutCall"
-                android:layout_width="230px"
-                android:layout_height="70px"
-                android:background="@drawable/orange_btn_selector"
-                >
-
-                <ImageView
-                    android:layout_width="45px"
-                    android:layout_height="45px"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="35px"
-                    android:src="@drawable/call_icon_selector" />
-
-                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/textViewCall"
-                    android:layout_width="150px"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="115px"
-                    android:text="@string/call"
-                    android:textColor="@drawable/white_color_selector"
-                    android:textSize="42px" />
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/textViewOrderId"
+                android:layout_width="160px"
+                android:layout_height="wrap_content"
+                android:text="@string/order_id"
+                android:textColor="@color/new_orange"
+                android:textSize="@dimen/text_size_30"
+                />
 
             <TextView
-                android:id="@+id/textViewOrderStatus"
+                android:id="@+id/textViewOrderIdValue"
+                android:layout_width="280px"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10px"
+                android:text="00000000000"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_30"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10px"
+            >
+            <TextView
+                android:id="@+id/textViewCustomerName"
+                android:layout_width="160px"
+                android:layout_height="wrap_content"
+                android:text="@string/to_no_colon"
+                android:textColor="@color/new_orange"
+                android:textSize="@dimen/text_size_30"
+                />
+
+            <TextView
+                android:id="@+id/textViewCustomerNameValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
                 android:layout_marginLeft="10px"
-                android:text=""
-                android:textColor="@color/bg_grey_opaque"
-                android:textSize="32px" />
+                android:text="Aneesh"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_30"
+                />
+        </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10px"
+            >
+            <TextView
+                android:id="@+id/textViewCustomerDeliveryAddress"
+                android:layout_width="160px"
+                android:layout_height="wrap_content"
+                android:text="@string/address"
+                android:textColor="@color/new_orange"
+                android:textSize="@dimen/text_size_30"
+                />
+
+            <TextView
+                android:id="@+id/textViewCustomerDeliveryAddressValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10px"
+                android:text="Madhya Marg, 28B, Sector 28, Chandigarh"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_30"
+                />
         </LinearLayout>
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="@color/grey_btn"
+
+    <TextView
+        android:id="@+id/textViewOrderStatus"
+        android:layout_width="206px"
+        android:layout_height="58px"
+        android:text="Delivered"
+        android:textColor="@color/green_delivery"
+        android:layout_alignParentRight="true"
+        android:textSize="@dimen/text_size_30"
+        android:background="@drawable/bg_white_dark1_r"
+        android:gravity="center"
+        android:layout_marginTop="20px"
+        android:layout_marginRight="30px"
         />
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="60px"
+        android:layout_height="60px"
+        android:background="@drawable/back_inv_btn_selector"
+        android:rotation="180"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="6px"
+        android:background="@drawable/shadow_down"
+        android:layout_below="@+id/linearLayoutMain"/>
+
+</RelativeLayout>
