--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -112,6 +112,10 @@
     
     <color name="dialog_border_color">#AA7E7D78</color>
 
+
+    <color name="green_delivery">#09BC15</color>
+    <color name="red_delivery">#ee2e2e</color>
+
     <!-- share lb colors-->
     <color name="grey_lb_list">#f6f6f6</color>
     <color name="white_60">#9AFFFFFF</color>
@@ -128,7 +132,7 @@
 
 
 
-    <color name="text_color">#242930</color>
+    <color name="text_color">#2F221B</color>
     
    
 </resources>
