--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -250,11 +250,56 @@
                 android:layout_below="@+id/upLayout"
                 android:background="@drawable/shadow_down"/>
 
+
+            <!-- Delivery over layout-->
+            <RelativeLayout
+                android:id="@+id/relativeLayoutDeliveryOver"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="visible"
+                android:layout_marginTop="40px"
+                >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="30px"
+                    android:layout_marginLeft="40px"
+                    android:layout_toLeftOf="@+id/textViewDeliveryIsOver"
+                    android:src="@color/black_translucent"
+
+                    />
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewDeliveryIsOver"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:text="@string/delivery_is_over"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/text_size_36"
+                    />
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="2px"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="30px"
+                    android:layout_marginRight="40px"
+                    android:layout_toRightOf="@+id/textViewDeliveryIsOver"
+                    android:src="@color/black_translucent"
+                    />
+
+            </RelativeLayout>
+
             <!-- customer amount layout -->
             <LinearLayout
                 android:id="@+id/endRideInfoRl"
                 android:layout_width="match_parent"
-                android:layout_height="320px"
+                android:layout_height="260px"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:splitMotionEvents="false"
@@ -266,11 +311,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="25px"
                     android:gravity="center"
                     android:text="@string/jugnoo_ride_over"
                     android:textColor="@color/black"
-                    android:textSize="48px"
+                    android:textSize="@dimen/text_size_40"
                     />
 
 
@@ -278,7 +322,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="40px"
+                    android:layout_marginTop="30px"
                     android:gravity="center"
                     android:paddingLeft="40px"
                     android:paddingRight="40px">
@@ -291,21 +335,96 @@
                         android:textColor="@color/black"
                         android:textSize="72px"/>
 
-
-                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                        android:id="@+id/takeFareValue"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:singleLine="true"
-                        android:text=" Rs100"
-                        android:textColor="@color/black"
-                        android:textSize="72px"
-                        android:visibility="gone"/>
-
                 </LinearLayout>
 
             </LinearLayout>
 
+            <!-- delivery end orders layout-->
+            <LinearLayout
+                android:id="@+id/linearLayoutEndDelivery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/bg_white_dark1_r"
+                android:layout_marginLeft="36px"
+                android:layout_marginRight="36px"
+                android:layout_marginBottom="36px"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20px"
+                    android:layout_marginLeft="50px"
+                    android:layout_marginRight="50px"
+                    >
+                    <TextView
+                        android:id="@+id/textViewOrdersDelivered"
+                        android:layout_width="350px"
+                        android:layout_height="wrap_content"
+                        android:text="@string/orders_delivered"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=":"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        android:layout_toRightOf="@+id/textViewOrdersDelivered"
+                        />
+
+                    <TextView
+                        android:id="@+id/textViewOrdersDeliveredValue"
+                        android:layout_width="200px"
+                        android:gravity="right"
+                        android:layout_height="wrap_content"
+                        android:text="50"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        android:layout_alignParentRight="true"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20px"
+                    android:layout_marginBottom="20px"
+                    android:layout_marginLeft="50px"
+                    android:layout_marginRight="50px"
+                    >
+                    <TextView
+                        android:id="@+id/textViewOrdersReturned"
+                        android:layout_width="350px"
+                        android:layout_height="wrap_content"
+                        android:text="@string/orders_returned"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=":"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        android:layout_toRightOf="@+id/textViewOrdersReturned"
+                        />
+
+                    <TextView
+                        android:id="@+id/textViewOrdersReturnedValue"
+                        android:layout_width="200px"
+                        android:gravity="right"
+                        android:layout_height="wrap_content"
+                        android:text="50"
+                        android:textColor="@color/text_color"
+                        android:textSize="@dimen/text_size_26"
+                        android:layout_alignParentRight="true"
+                        />
+                </RelativeLayout>
+
+            </LinearLayout>
 
             <!-- luggage count rl-->
             <RelativeLayout
@@ -384,7 +503,6 @@
                 android:id="@+id/linearLayoutReviewSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 >
@@ -400,7 +518,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="2px"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="10px"
+                        android:layout_marginRight="30px"
+                        android:layout_marginLeft="40px"
                         android:layout_toLeftOf="@+id/textViewRateYourCustomer"
                         android:src="@color/black_translucent"
 
@@ -414,7 +533,7 @@
                         android:gravity="center"
                         android:text="@string/Rate_Your_Customer"
                         android:textColor="@color/black"
-                        android:textSize="32px"
+                        android:textSize="@dimen/text_size_36"
                         />
 
                     <ImageView
@@ -422,7 +541,8 @@
                         android:layout_height="2px"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="10px"
+                        android:layout_marginLeft="30px"
+                        android:layout_marginRight="40px"
                         android:layout_toRightOf="@+id/textViewRateYourCustomer"
                         android:src="@color/black_translucent"
                         />
@@ -434,7 +554,7 @@
                     style="@style/RatingBarBlue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="72px"
+                    android:layout_marginTop="32px"
                     android:numStars="5"
                     android:rating="1"
                     android:stepSize="1.0"
@@ -445,7 +565,7 @@
                     android:id="@+id/reviewSubmitBtn"
                     android:layout_width="648px"
                     android:layout_height="99px"
-                    android:layout_marginTop="52px"
+                    android:layout_marginTop="22px"
                     android:background="@drawable/new_orange_btn_round_corner_normal"
                     android:text="@string/submit"
                     android:textColor="@drawable/white_color_selector"
@@ -453,9 +573,9 @@
 
                 <Button
                     android:id="@+id/reviewSkipBtn"
-                    android:layout_width="648px"
-                    android:layout_height="99px"
-                    android:layout_marginTop="32px"
+                    android:layout_width="400px"
+                    android:layout_height="70px"
+                    android:layout_marginTop="22px"
                     android:background="@drawable/white_bg"
                     android:text="@string/skip"
                     android:textColor="@color/new_orange"
