feature_dodo: in ride make delivery button

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/dimens.xml
@@ -58,5 +58,10 @@
 
     <dimen name="top_bar_height">98px</dimen>
 
+    <dimen name="button_width_big">400px</dimen>
+    <dimen name="button_height">90px</dimen>
+    <dimen name="button_width_big_extra">430px</dimen>
+    <dimen name="button_width_small">200px</dimen>
+
 
 </resources>
