--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -520,11 +520,11 @@
 
                 <Button
                     android:id="@+id/driverEndRideBtn"
-                    android:layout_width="400px"
-                    android:layout_height="99px"
+                    android:layout_width="430px"
+                    android:layout_height="90px"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
                     android:layout_marginBottom="27px"
+                    android:layout_marginLeft="45px"
                     android:background="@drawable/menu_black_btn_selector"
                     android:text="@string/end_ride"
                     android:textColor="@drawable/white_color_selector"
@@ -532,15 +532,18 @@
 
                 <Button
                     android:id="@+id/buttonMakeDelivery"
-                    android:layout_width="400px"
-                    android:layout_height="99px"
+                    android:layout_width="200px"
+                    android:layout_height="90px"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="45px"
                     android:layout_marginBottom="27px"
                     android:background="@drawable/menu_black_btn_selector"
                     android:text="@string/make_delivery"
                     android:textColor="@drawable/white_color_selector"
-                    android:textSize="@dimen/button_text_size"/>
+                    android:textSize="@dimen/button_text_size"
+                    android:visibility="visible"
+                    />
 
             </RelativeLayout>
         </LinearLayout>
