--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -35,105 +35,7 @@
                     >
                 </android.support.v7.widget.RecyclerView>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10px"
-                    >
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="20px"
-                        android:orientation="vertical">
-
-
-                        <TextView
-                            android:id="@+id/textViewCustomerPickupAddress"
-                            android:layout_width="450px"
-                            android:layout_height="wrap_content"
-                            android:gravity="center_vertical"
-                            android:text="Madhya Marg, 28B, Sector 28, Chandigarh"
-                            android:textColor="@color/bg_grey_opaque"
-                            android:textSize="30px"
-                            android:visibility="visible"/>
-
-                        <RelativeLayout
-                            android:id="@+id/relativeLayoutShowDistance"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_marginTop="15px">
-
-                            <ImageView
-                                android:id="@+id/customerMarker"
-                                android:layout_width="35px"
-                                android:layout_height="30px"
-                                android:layout_centerVertical="true"
-                                android:src="@drawable/customer2_list_marker"/>
-
-                            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                                android:id="@+id/textViewShowDistance"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="45px"
-                                android:text="225 m away"
-                                android:textColor="@color/black"
-                                android:textSize="32px"/>
-
-                        </RelativeLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="20px"
-                        android:orientation="vertical">
-
-                        <RelativeLayout
-                            android:id="@+id/relativeLayoutCall"
-                            android:layout_width="200px"
-                            android:layout_height="70px"
-                            android:background="@drawable/orange_btn_selector">
-
-                            <ImageView
-                                android:id="@+id/driverCallIcon"
-                                android:layout_width="45px"
-                                android:layout_height="45px"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="15px"
-                                android:src="@drawable/call_icon_selector"/>
-
-                            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                                android:id="@+id/textViewCall"
-                                android:layout_width="150px"
-                                android:layout_height="wrap_content"
-                                android:layout_centerVertical="true"
-                                android:layout_marginLeft="75px"
-                                android:text="@string/call"
-                                android:textColor="@drawable/white_color_selector"
-                                android:textSize="42px"/>
-                        </RelativeLayout>
-
-                        <TextView
-                            android:id="@+id/textViewRideStatus"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="20px"
-                            android:text="Accepted"
-                            android:textColor="@color/bg_grey_opaque"
-                            android:textSize="34px"
-
-                            />
-
-                    </LinearLayout>
-                </RelativeLayout>
-
+                <include layout="@layout/layout_customer_info"/>
 
             </LinearLayout>
 
