--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/textViewOrderId"
                 android:layout_width="160px"
                 android:layout_height="wrap_content"
-                android:text="@string/order_id"
+                android:text="@string/delivery_id"
                 android:textColor="@color/new_orange"
                 android:textSize="@dimen/text_size_30"
                 />
