--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_customer_info.xml
@@ -2,19 +2,21 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="280px">
-
+    android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="500px"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="20px"
-        android:orientation="vertical">
+        android:layout_marginTop="20px"
+        android:layout_marginBottom="20px"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        >
 
         <TextView
             android:id="@+id/textViewCustomerName"
-            android:layout_width="450px"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="Aneesh Bansal"
@@ -24,52 +26,38 @@
 
         <TextView
             android:id="@+id/textViewCustomerPickupAddress"
-            android:layout_width="450px"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:layout_marginTop="24px"
+            android:layout_marginTop="12px"
             android:text="Madhya Marg, 28B, Sector 28, Chandigarh"
             android:textColor="@color/bg_grey_opaque"
             android:textSize="30px"
             android:visibility="visible"/>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutDeliveryCount"
-            android:layout_width="wrap_content"
+        <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+            android:id="@+id/textViewDeliveryCount"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="32px">
-
-            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                android:id="@+id/textViewDeliveryCountText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="30px"
-                android:text="@string/delivery_numbers"/>
-
-            <TextView
-                android:id="@+id/textViewDeliveryCountValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="24px"
-                android:layout_toRightOf="@+id/textViewDeliveryCountText"
-                android:text="06"
-                android:textColor="@color/black"
-                android:textSize="32px"/>
-
-        </RelativeLayout>
-
+            android:textSize="@dimen/text_size_30"
+            android:text="@string/delivery_numbers"
+            android:textColor="@color/text_color"
+            android:layout_marginTop="12px"
+            android:visibility="visible"
+            />
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="180px"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginRight="20px"
-        android:orientation="vertical">
+        android:layout_marginTop="20px"
+        android:layout_marginBottom="20px"
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        >
 
         <RelativeLayout
             android:id="@+id/relativeLayoutCall"
@@ -96,59 +84,44 @@
                 android:textSize="42px"/>
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutFare"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/linearLayoutDeliveryFare"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginTop="24px">
-
-            <LinearLayout
-                android:id="@+id/linearLayoutFare"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="8px"
+            android:visibility="visible"
+            >
 
             <TextView
-                android:id="@+id/textViewFareText"
-                android:layout_width="wrap_content"
+                android:id="@+id/textViewDeliveryFare"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="30px"
-                android:text="@string/fare1"/>
+                android:text="Rs. 200"
+                android:textColor="@color/text_color"
+                android:textSize="@dimen/text_size_30"/>
 
             <TextView
-                android:id="@+id/textViewApprox"
-                android:layout_width="wrap_content"
+                android:id="@+id/textViewDeliveryApprox"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16px"
+                android:textSize="@dimen/text_size_18"
+                android:textColor="@color/text_color"
                 android:text="@string/approx"/>
 
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/textViewFareValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/linearLayoutFare"
-                android:text="Rs. 200"
-                android:layout_marginLeft="10px"
-                android:textColor="@color/black"
-                android:textSize="32px"/>
-
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <TextView
             android:id="@+id/textViewShowDistance"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_centerVertical="true"
-            android:layout_marginTop="24px"
+            android:layout_marginTop="8px"
             android:text="225 m away"
             android:textColor="@color/black"
-            android:textSize="32px"/>
-
+            android:textSize="@dimen/text_size_30"
+            android:visibility="visible"
+            />
 
     </LinearLayout>
 
